<resources>
    <string name="app_name" translatable="false">CollectMe</string>
    <string name="Title_form_inscription">Title_form_inscription</string>
    <string name="email_text">email_text</string>
    <string name="motDePasse_text">mot de passe</string>
    <string name="inscription_text">S\'inscrire</string>
    <string name="allerAConnexion">Connexion</string>
    <string name="inscription_reussite">inscription_reussite</string>
    <string name="inscription_echec">inscription_echec</string>
    <string name="Title_form_connexion">Formulaire de connexion</string>
    <string name="connexion_reussite">bravo !</string>
    <string name="connexion_echec">Une erreur est survenue</string>
    <string name="Aucun_produit_text">Aucun_produit_text</string>
    <string name="prix_ttc_text">Prix TTC</string>
    <string name="prix_ht_text">prix HT</string>
</resources>